--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.20",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
+    "pinia": "^2.2.2",
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.10",
     "vue": "^3.4.37",
