--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "4.x",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "pinia": "^2.2.2",
