--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@types/node": "^22.5.5",
     "ant-design-vue": "4.x",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
+    "path": "^0.12.7",
     "pinia": "^2.2.2",
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.10",
