--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "path": "^0.12.7",
+    "pdf-vue3": "^1.0.12",
     "pinia": "^2.2.2",
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.10",
