--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "path": "^0.12.7",
-    "pdf-vue3": "^1.0.12",
     "pinia": "^2.2.2",
     "postcss": "^8.4.44",
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.10",
     "vue": "^3.4.37",
-    "vue-router": "4.0.3"
+    "vue-router": "4.0.3",
+    "vue3-pdf-app": "^1.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
